# esp32_template

./: .clang-format  .clangd  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  add_template.py  add_user_task.py  flash_updater.ps1  sdkconfig  sdkconfig.defaults  sdkconfig.old  sdkconfig_c3  sdkconfig_c3_changed  sdkconfig_esp32  sdkconfig_esp32_last  todo.txt  zephyr.bat
generator/: add_template.py  address_space_isimfw400.rst  base_object.py  main.dart  make_fs.bat  regs_description.pat  regs_description_client.pat  regs_generator.py  regs_handl.py
main/: CMakeLists.txt  Kconfig.projbuild  battery_state.c  battery_state.h  common.c  common.h  component.mk  crc.c  crc.h  di_handle.c  di_handle.h  epaper.c  feeder.c  feeder.h  iirls_handler.c  iirls_handler.h  interrupt.c  interrupt.h  link_functions.c  link_functions.h  lwipopts.h  main_config.h  memory_handle.c  memory_handle.h  mirror_storage.c  mirror_storage.h  modbus.c  modbus.h  morse.c  morse.h  os_type.h  pin_map.h  polisher.c  polisher.h  pwm_test.c  pwm_test.h  regs.c  regs.h  regs_description.c  regs_description.h  (+20 more)
main/http/: .gitignore  fs.c  fsdata.c  http_client.c  httpd.c  httpd.h  httpd_opts.h  httpd_ssi_cgi.c  httpd_ssi_cgi.h  httpd_structs.h  json.c  json.h
main/http/fs/: 404.html  credential.html  download_error.html  download_os.html  incorrect_command.html  index.html  os_change_applyed.html  os_control.html  uploaddone_os1.html  uploaddone_os2.html  wifi_settings.html
main/http/makefsdata/: .gitignore  CMakeLists.txt  gccToolchain.cmake  makefile  makefsdata.c  makefsdata_l  readme.txt  type_def.h
main/modbus_tcp/: modbus_tcp.c  modbus_tcp.h
main/modbus_tcp_client/: modbus_master_description.h  modbus_tcp_client.c  modbus_tcp_client.h  regs_description_client.c  regs_description_client.h
main/radar/: sr04.c  sr04.h
main/udp_broadcast/: udp_broadcast.c  udp_broadcast.h
test/outside/: set_up.py  udp_broadcast_server.py
updater/: CMakeLists.txt  sdkconfig  sdkconfig.defaults
updater/main/: CMakeLists.txt  updater_main.c
user_tasks/: CMakeLists.txt  di_handle.c  di_handle.h  epaper.c  epaper.h  feeder.c  feeder.h  morse.c  morse.h  polisher.c  polisher.h  pwm_test.c  pwm_test.h  regs_description_user.c  scd41.c  scd41.h  step_motor.c  step_motor.h  test_int.c  test_int.h  touch_handle.c  touch_handle.h  user_tasks_init.c
