idf_build_get_property(project_dir PROJECT_DIR)
idf_component_register(
    SRCS "wifi_slip_main.c"
    SRCS "slip_handle.c"
    SRCS "modbus.c"
    SRCS "regs.c"
    SRCS "regs_description.c"
    SRCS "http/fs.c"
    SRCS "http/fsdata.c"
    SRCS "http/http_client.c"
    SRCS "http/httpd.c"
    SRCS "http/httpd_ssi_cgi.c"
    SRCS "http/json.c"
    SRCS "common.c"
    SRCS "mirror_storage.c"
    SRCS "crc.c"
    SRCS "memory_handle.c"
    SRCS "pwm_test.c"
    SRCS "modbus_tcp/modbus_tcp.c"
    SRCS "modbus_tcp_client/modbus_tcp_client.c"
    SRCS "udp_broadcast/udp_broadcast.c"
    SRCS "touch_handle.c"
    SRCS "u8g2_esp32_hal.c"
    SRCS "iirls_handler.c"
    SRCS "di_handle.c"
    SRCS "radar/sr04.c"
    SRCS "interrupt.c"
    SRCS "step_motor.c"
    SRCS "sleep_control.c"
    SRCS "wireless_control.c"
    SRCS "feeder.c"
    SRCS "polisher.c"
    SRCS "test_int.c"
    SRCS "morse.c"
     INCLUDE_DIRS "."
    INCLUDE_DIRS "radar/."
    INCLUDE_DIRS "http/."
    INCLUDE_DIRS "udp_broadcast/."
    INCLUDE_DIRS "modbus_tcp_client/."
    EMBED_TXTFILES ${project_dir}/server_certs/ca_cert.pem
    REQUIRES esp_netif nvs_flash u8g2 bt
)
